openshift/deployment_raw.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      alpha.image.policy.openshift.io/resolve-names: '*'
      app.openshift.io/route-disabled: "false"
      app.openshift.io/vcs-ref: ""
      app.openshift.io/vcs-uri: https://github.com/faslasherin/linux-skill-assessment
      deployment.kubernetes.io/revision: "6"
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"linux-skill-assessment:latest","namespace":"faslasherin-dev"},"fieldPath":"spec.template.spec.containers[?(@.name==\"linux-skill-assessment\")].image","paused":false}]'
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2026-09-10T11:00:41Z"
    generation: 18
    labels:
      app: linux-skill-assessment
      app.kubernetes.io/component: linux-skill-assessment
      app.kubernetes.io/instance: linux-skill-assessment
      app.kubernetes.io/name: linux-skill-assessment
      app.kubernetes.io/part-of: linux-skill-assessment-app
    name: linux-skill-assessment
    namespace: faslasherin-dev
    resourceVersion: "6082481703"
    uid: 018d37f4-d19d-4d4a-a031-9baa859e74d8
  spec:
    progressDeadlineSeconds: 600
    replicas: 3
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: linux-skill-assessment
    strategy:
      rollingUpdate:
        maxSurge: 1
        maxUnavailable: 0
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: linux-skill-assessment
          deployment: linux-skill-assessment
      spec:
        containers:
        - image: image-registry.openshift-image-registry.svc:5000/faslasherin-dev/linux-skill-assessment@sha256:5606c324afe6c4e70e3b96f826b2aefa2a8acd9e39258d26e538087aca7b25d8
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 5
          name: linux-skill-assessment
          ports:
          - containerPort: 8080
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 32Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 3
    conditions:
    - lastTransitionTime: "2026-09-11T05:10:44Z"
      lastUpdateTime: "2026-09-11T05:10:44Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-09-10T14:56:48Z"
      lastUpdateTime: "2026-09-11T05:47:33Z"
      message: ReplicaSet "linux-skill-assessment-cd4f58cd4" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 18
    readyReplicas: 3
    replicas: 3
    updatedReplicas: 3
kind: List
metadata:
  resourceVersion: ""
