openshift/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: linux-skill-assessment-network-policy
  namespace: faslasherin-dev
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
    ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector: {}
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: linux-skill-assessment
  policyTypes:
  - Ingress
